--- a/unicode.css
+++ b/unicode.css
@@ -163,6 +163,8 @@
   background: var(--white);
   transition: all var(--transition-normal);
   cursor: pointer;
+  position: relative;
+  min-height: 320px;
 }
 
 .upload-area:hover {
